# proving-grounds

./: README.md  pyproject.toml
bash-scripting/nmap-gen/: nmap-gen.sh
src/bash-scripting/dir-tool/: dir-tool.sh
src/bash-scripting/nmap-gen/argparse/: argparse.sh
src/python-scripting/for-fun/: menu.py
