[project]
name = "proving-grounds"
version = "0.1.0"
description = "For testing"
authors = [
    {name = "Wrsford",email = "willstafford@me.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyfiglet (>=1.0.4,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
